book/tests/snapshots/snapshot__run_display_reference_prql@queries__syntax-12.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/queries/syntax-12.prql
---
from `music.albums`



