book/tests/snapshots/snapshot__run_display_reference_prql@queries__syntax-2.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/queries/syntax-2.prql
---
from numbers
derive [
  x = 1,
  y = 2,
]
derive [
  a = x,
  b = y,
]
derive [
  c = a,
  d = b,
]



