book/tests/snapshots/snapshot__run_display_reference_prql@queries__syntax-3.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/queries/syntax-3.prql
---
from employees
select [first_name]



