book/tests/snapshots/snapshot__run_display_reference_prql@queries__syntax-6.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/queries/syntax-6.prql
---
from employees
aggregate [average salary]



